tests/compile_fail/thread_local/runtime_thread_local 0.stderr
error: no rules expected the token `=`
 --> $DIR/runtime_thread_local 0.rs:2:14
  |
2 |     type Foo = u8;
  |              ^ no rules expected this token in macro call

error[E0433]: failed to resolve: use of undeclared type `Foo`
 --> $DIR/runtime_thread_local 0.rs:7:22
  |
7 |     assert_send_sync(Foo::new());
  |                      ^^^ use of undeclared type `Foo`
